--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "synccloud.node.logging",
+  "name": "@synccloud/logging",
   "version": "0.0.1",
   "description": "",
   "main": "src/index",
