--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@synccloud/logging",
   "version": "0.0.1",
   "description": "",
-  "main": "src/index",
+  "main": "dist/index",
   "scripts": {
     "test": "node_modules/.bin/mocha $(find test/*.spec.es6)"
   },
@@ -26,12 +26,12 @@
     "moment": "^2.10.6"
   },
   "devDependencies": {
-    "babel-core": "^5.8.33",
+    "babel-core": "^6.7.2",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-preset-es2015-node5": "^1.1.2",
+    "babel-preset-stage-1": "^6.5.0",
     "chai": "^3.4.1",
     "chai-register": "0.0.1",
     "mocha": "^2.3.4"
-  },
-  "babel": {
-    "stage": 1
   }
 }
